fix chapter width on mobile

--- a/pages/ch/chapter.module.scss
+++ b/pages/ch/chapter.module.scss
@@ -14,6 +14,5 @@
     text-align: center;
     white-space: nowrap;
     font-weight: bold;
-    font-size: 1.2rem;
     text-decoration: none;
 }
